--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
 		"start": "node index.js"
 	},
 	"dependencies": {
+		"body-parser": "^1.20.2",
+		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
-		"cors": "^2.8.5"
+		"mongoose": "^7.4.1",
+		"nodemon": "^3.0.1",
+		"user": "file:./user"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
